apps/base/servarr/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/sonarr:version-4.0.13.2932
          imagePullPolicy: Always
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          readinessProbe:
            httpGet:
              path: /login
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /data/downloads
            - name: shows
              mountPath: /data/shows
            - name: booleans
              mountPath: /tmp
      volumes:
        - name: config
          emptyDir: {}
        - name: booleans
          emptyDir: {}
        - name: shows
          persistentVolumeClaim:
            claimName: shows
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
