apps/base/servarr/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  serviceName: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - image: ghcr.io/home-operations/sonarr:4.0.14 # {"$imagepolicy": "flux-system:sonarr"}
          imagePullPolicy: Always
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2048Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: rook-ceph-block
